GOVUKAPP-3031 PYV crash when Select All (#555)
* Add UUID to Visited UI class to use instead of the title as the key in Lazy Column